Improve the text

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": 19,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -24,11 +24,11 @@
             "source": [
                 "# Executive summary\n",
                 "\n",
-                "The experiment descibed in this document compares 2 different algorithms for solving the 3-SAT problem. These algorithms are `prob_sat` and `gsat` and they are from the group of non-complete algorithms. It tries to answer question.\n",
+                "The experiment descibed in this document compares 2 different algorithms for solving the 3-SAT problem. These algorithms are `prob_sat` and `gsat` and they are from the group of not complete algorithms. It tries to answer a question.\n",
                 "\n",
                 "**Is ProbSAT better algorithm for solving 3-SAT hard instances than GSAT for the given parameters $p$, $c_m$, $c_b$?**\n",
                 "\n",
-                "\n",
+                "Repository with the source code is available at https://github.com/vnarek/prob-sat-vs-gsat\n",
                 "\n",
                 "# Introduction\n",
                 "\n",
@@ -48,12 +48,14 @@
             "source": [
                 "# Material\n",
                 "\n",
-                "`GSAT` implementation given on the lectures was used to generate solutions to instances. `Prob_sat` implementation was written in python from scratch using the same API. Both implementations ran instances from the `dataset`, each one for 15 times with every combination of `MAX_TRIES` and `MAX_FLIPS`, so that it is possible to average anomalies. Script for running the `csv` generation is called `gen_csv.sh` and is part of the source code. Results were then saved as a csv and sample from that csv could be seen bellow. Full data is available in the `res.csv` file."
+                "`GSAT` implementation, given on the lectures, was used to generate solutions to the instances. `Prob_sat` implementation was written in Python from scratch using the same API. Both implementations ran instances from the `dataset`, each one for 15 times with every combination of `MAX_TRIES` and `MAX_FLIPS`, so that it is possible to average anomalies.\n",
+                "\n",
+                "Script for running the `csv` generation is called `gen_csv.sh` and `create_dataset.sh` was used for `dataset` creation. Both scrips are available in the source code. Results were then saved as a csv and sample from that csv could be seen bellow. Full data is available in the `res.csv` file."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": 20,
             "metadata": {},
             "outputs": [
                 {
@@ -61,27 +63,27 @@
                         "text/markdown": [
                             "|   iter | filename      | alg      |   max_tries |   max_flips | solved   |   num_vars |\n",
                             "|-------:|:--------------|:---------|------------:|------------:|:---------|-----------:|\n",
-                            "|     15 | uf50-0853.cnf | gsat     |         300 |          20 | True     |         50 |\n",
-                            "|     39 | uf50-0851.cnf | prob_sat |         500 |          20 | True     |         50 |\n",
-                            "|    177 | uf50-0369.cnf | prob_sat |         400 |          20 | True     |         50 |\n",
-                            "|     10 | uf20-0433.cnf | prob_sat |         300 |          20 | True     |         20 |\n",
-                            "|     31 | uf50-0636.cnf | gsat     |         500 |          50 | True     |         50 |\n",
-                            "|   2385 | uf75-057.cnf  | prob_sat |         400 |         120 | True     |         75 |\n",
-                            "|    672 | uf20-0897.cnf | gsat     |         400 |         100 | True     |         20 |\n",
-                            "|   6199 | uf75-059.cnf  | gsat     |         300 |         120 | True     |         75 |\n",
-                            "|     56 | uf20-0433.cnf | prob_sat |         400 |          50 | True     |         20 |\n",
-                            "|     16 | uf20-0772.cnf | prob_sat |         300 |          50 | True     |         20 |\n",
-                            "|   1048 | uf75-066.cnf  | gsat     |         300 |         120 | True     |         75 |\n",
-                            "|    994 | uf20-0533.cnf | gsat     |         300 |         100 | True     |         20 |\n",
-                            "|   1350 | uf75-033.cnf  | prob_sat |         300 |          50 | True     |         75 |\n",
-                            "|     18 | uf50-043.cnf  | gsat     |         500 |         100 | True     |         50 |\n",
-                            "|     59 | uf20-0969.cnf | prob_sat |         400 |         100 | True     |         20 |"
+                            "|   6198 | uf75-080.cnf  | gsat     |         400 |          50 | True     |         75 |\n",
+                            "|    115 | uf20-0564.cnf | prob_sat |         500 |          50 | True     |         20 |\n",
+                            "|  10000 | uf75-094.cnf  | gsat     |         500 |          20 | False    |         75 |\n",
+                            "|     22 | uf20-0392.cnf | prob_sat |         300 |         120 | True     |         20 |\n",
+                            "|     22 | uf20-0897.cnf | prob_sat |         400 |         100 | True     |         20 |\n",
+                            "|  10000 | uf75-089.cnf  | gsat     |         500 |          20 | False    |         75 |\n",
+                            "|     95 | uf50-0369.cnf | gsat     |         300 |          50 | True     |         50 |\n",
+                            "|    324 | uf20-0468.cnf | gsat     |         500 |         100 | True     |         20 |\n",
+                            "|    179 | uf20-0897.cnf | gsat     |         400 |         100 | True     |         20 |\n",
+                            "|      7 | uf20-0327.cnf | prob_sat |         500 |         100 | True     |         20 |\n",
+                            "|     10 | uf20-0738.cnf | prob_sat |         300 |          20 | True     |         20 |\n",
+                            "|      9 | uf20-0897.cnf | gsat     |         300 |         120 | True     |         20 |\n",
+                            "|     80 | uf20-0130.cnf | prob_sat |         400 |         120 | True     |         20 |\n",
+                            "|    145 | uf50-0369.cnf | gsat     |         300 |          50 | True     |         50 |\n",
+                            "|    113 | uf20-0339.cnf | prob_sat |         300 |         100 | True     |         20 |"
                         ],
                         "text/plain": [
                             "<IPython.core.display.Markdown object>"
                         ]
                     },
-                    "execution_count": 29,
+                    "execution_count": 20,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -102,12 +104,13 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Some runs didn't find solution to the problem. Those runs were penalized by multiplying their number of iterations by 10. Sample of runs that did not finish after a number of tries specified can be seen below."
+                "Not every run found a solution to the problem. Those that didn't were penalized by multiplying their number of iterations by 10. Sample of runs that did not finish after a number of tries specified can be seen below.\n",
+                "\n"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 37,
+            "execution_count": 21,
             "metadata": {},
             "outputs": [
                 {
@@ -120,19 +123,19 @@
                 {
                     "data": {
                         "text/markdown": [
-                            "|       iter | filename     | alg      |   max_tries |   max_flips | solved   |   num_vars |\n",
-                            "|-----------:|:-------------|:---------|------------:|------------:|:---------|-----------:|\n",
-                            "| 1000000000 | uf75-089.cnf | prob_sat |         500 |          20 | False    |         75 |\n",
-                            "|  600000000 | uf75-042.cnf | prob_sat |         300 |          20 | False    |         75 |\n",
-                            "|  800000000 | uf75-070.cnf | prob_sat |         400 |          20 | False    |         75 |\n",
-                            "|  600000000 | uf75-042.cnf | prob_sat |         300 |          20 | False    |         75 |\n",
-                            "|  800000000 | uf75-070.cnf | gsat     |         400 |          20 | False    |         75 |"
+                            "|   iter | filename     | alg      |   max_tries |   max_flips | solved   |   num_vars |\n",
+                            "|-------:|:-------------|:---------|------------:|------------:|:---------|-----------:|\n",
+                            "| 300000 | uf75-070.cnf | gsat     |         300 |         100 | False    |         75 |\n",
+                            "|  80000 | uf75-070.cnf | gsat     |         400 |          20 | False    |         75 |\n",
+                            "| 480000 | uf75-012.cnf | prob_sat |         400 |         120 | False    |         75 |\n",
+                            "| 480000 | uf75-012.cnf | gsat     |         400 |         120 | False    |         75 |\n",
+                            "| 100000 | uf75-022.cnf | prob_sat |         500 |          20 | False    |         75 |"
                         ],
                         "text/plain": [
                             "<IPython.core.display.Markdown object>"
                         ]
                     },
-                    "execution_count": 37,
+                    "execution_count": 21,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -147,7 +150,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Data acquired from the gathering step were then averaged accross `filename`, `algorithm`, `max_tries`, `max_flips` and `num_vars` columns. Resulting dataset has only 240 rows total, with `iter` equal to the average of the 15 runs that were done per configuration."
+                "Runs acquired from the gathering step were then grouped by `filename`, `algorithm`, `max_tries`, `max_flips` and `num_vars` columns. Resulting dataset has only 240 rows total, with `iter` equal to the average of the 15 runs that were done per configuration."
             ]
         },
         {
@@ -158,12 +161,12 @@
                 "\n",
                 "In this section preprocessed data is going to be presented in the human interpretable form, using metrics.\n",
                 "\n",
-                "First metric that's going to be considered is the `mean` number of iterations. It's available in the table below. `Prob_sat` is takes lesser number of iterations than `gsat` on average. "
+                "First metric that's going to be considered is the `mean` number of iterations. It's available in the table below. The reason for picking this metric is it's simplicity and ease of explainability. It shows, that `Prob_sat` takes lesser number of iterations than `gsat` on average."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 31,
+            "execution_count": 22,
             "metadata": {},
             "outputs": [
                 {
@@ -178,7 +181,7 @@
                             "<IPython.core.display.Markdown object>"
                         ]
                     },
-                    "execution_count": 31,
+                    "execution_count": 22,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -208,12 +211,12 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Next let's look at the cumulative distribution function (`cdf`) for both algorithms. X axis is converted to logarithmic scale to enhance clarity. No algorithm is systematically better, which is apparent from multiple intersections points of the probabilities at the start. From one point onward it seems that `prob_sat` is more succesful in finding solutions given enough number of iterations."
+                "Next let's look at the cumulative distribution function (`cdf`) for both algorithms. X axis is converted to logarithmic scale to enhance clarity. No algorithm is systematically better, which is apparent from multiple intersection points of the probabilities at the start. From one point onward it seems that there is a higher probability of finding solutions given number of iterations using the `prob_sat` algorithm. This metric was chosen, because it can be interesting to look at the development of the `cdf`."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 38,
+            "execution_count": 23,
             "metadata": {},
             "outputs": [
                 {
@@ -256,12 +259,17 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Last metric that was not discussed in the lectures is expected log normal distribution `cdf`. The $\\mu$ and $\\sigma$ values of log normal distribution were used to plot empirical `cdf`. Estimated moments are shown in the table and from the `cdf` we can again see that `prob_sat` is better than `gsat`."
+                "Last metric, that was not discussed in the lectures is expected log normal distributions `cdf`. The $\\mu$ and $\\sigma$ values of log normal distribution were used to plot the theoretical `cdf`. They were computed using these formulas.\n",
+                "\n",
+                "$$ \\hat{\\mu} = \\frac{\\sum_{i=1}^n log\\ x_i}{n}$$\n",
+                "$$ \\hat{\\sigma} = \\sqrt{\\frac{\\sum_{i=1}^n(log\\ x_i - \\mu)^2}{n-1}} $$\n",
+                "\n",
+                "Estimated moments are shown in the table and from the `cdf` we can again see that `prob_sat` is better than `gsat` in the long run. This metric is similar to the normal `cdf` shown above, but there is more clarity in the results."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 39,
+            "execution_count": 24,
             "metadata": {},
             "outputs": [
                 {
@@ -269,8 +277,8 @@
                         "text/markdown": [
                             "| algorithm   |    mu |   sigma |\n",
                             "|:------------|------:|--------:|\n",
-                            "| gsat        | 8.661 |   3.828 |\n",
-                            "| prob_sat    | 8.371 |   3.385 |"
+                            "| prob_sat    | 8.371 |   3.385 |\n",
+                            "| gsat        | 8.661 |   3.828 |"
                         ],
                         "text/plain": [
                             "<IPython.core.display.Markdown object>"
@@ -338,7 +346,7 @@
             "source": [
                 "# Discussion\n",
                 "\n",
-                "There is not a systematically better algorithm, which is apparent from the intersections in the `cdf`s. Given enough iterations it seems that `prob_sat` is better at finding solutions. Conclusion is that empirically `prob_sat` seems to be better than `gsat` at solving hard SAT-3 instances. So the final verdict to the question is. **Yes, ProbSAT seems to be better at solving hard 3-SAT instances given parameters $p$, $c_m$, $c_b$**."
+                "There is not a systematically better algorithm, which is apparent from the intersections in the `cdf`s. Given enough iterations it seems that `prob_sat` is better at finding solutions. So the final verdict to the question is. **Yes, ProbSAT seems to be better at solving hard 3-SAT instances given parameters $p$, $c_m$, $c_b$**."
             ]
         }
     ],
